--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tenolo/open-graph-bundle",
+    "name": "ylly/open-graph-bundle",
     "description": "A Symfony OpenGraph bundle",
     "keywords": [
         "opengraph",
@@ -31,7 +31,7 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0",
+        "php": ">=5.6",
 
         "symfony/framework-bundle": "~2.8|~3.4|~4.0",
         "symfony/config": "~2.8|~3.4|~4.0",
